<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motor_commander</name>
  <version>0.0.0</version>
  <description>上位机电机指令发布包</description>
  <maintainer email="2368521462@qq.com">lizihan</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>quadruped</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
    <build_type>ament_python</build_type>
  </export>

</package>
